Fix flick keyboard alignment using CSS Grid

--- a/public/style.css
+++ b/public/style.css
@@ -396,7 +396,7 @@ h2.section-title {
      color: black;
     padding: 0px;
     margin-top: -15px;
-    margin-bottom: -15px;
+    margin-bottom: -30px;
     border: 2px solid #ccc;
     border-radius: 6px;
     background: #f9f9f9;
